# chat-terminal

./: .chatconfig.toml  Cargo.toml  README.md  config.toml
src/: main.rs  openai.rs
