[package]
name = "dry-prompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-stream = "0.3.5"
clap = { version = "4.3.2", features = ["derive"] }
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_toml = "0.0.1"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"

[[bin]]
name="chat"
path="src/main.rs"